* Split up javascript into files based on tab * Reorganized structure (no longer threddsmanage) * Starting to code for CouchDB
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@13546 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,10 +4,18 @@
     <description>Data Cleaning &amp; Publishing Toolkit</description>
     <servlet>
         <servlet-name>IngestControlServlet</servlet-name>
-        <servlet-class>gov.usgs.cida.threddsmanage.servlet.IngestControlServlet</servlet-class>
+        <servlet-class>gov.usgs.cida.dcpt.IngestControlServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>DecorateServlet</servlet-name>
+        <servlet-class>gov.usgs.cida.dcpt.servlet.DecorateServlet</servlet-class>
     </servlet>
     <servlet-mapping>
         <servlet-name>IngestControlServlet</servlet-name>
         <url-pattern>/ingestors</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DecorateServlet</servlet-name>
+        <url-pattern>/decorate</url-pattern>
     </servlet-mapping>
 </web-app>
