--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 		<version>1.2.16</version>
 		<scope>compile</scope>
 	</dependency>
+	<dependency>
+		<groupId>gov.noaa.ngdc</groupId>
+		<artifactId>nciso</artifactId>
+		<version>1.1.1</version>
+		<type>jar</type>
+		<scope>compile</scope>
+	</dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
