* Reorganized layout * Added in rubric servlet to run through the ncml and xslt steps of ncISO * Edited xslt a bit
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@13673 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
+	<dependency>
+		<groupId>edu.ucar</groupId>
+		<artifactId>netcdf</artifactId>
+        <version>4.2</version>
+    </dependency>
     <dependency>
       <groupId>javax.servlet</groupId>
       <artifactId>servlet-api</artifactId>
