--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,6 +10,10 @@
         <servlet-name>DecorateServlet</servlet-name>
         <servlet-class>gov.usgs.cida.dcpt.servlet.DecorateServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>GenerateRubricServlet</servlet-name>
+        <servlet-class>gov.usgs.cida.dcpt.servlet.GenerateRubricServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IngestControlServlet</servlet-name>
         <url-pattern>/ingestors</url-pattern>
@@ -17,5 +21,9 @@
     <servlet-mapping>
         <servlet-name>DecorateServlet</servlet-name>
         <url-pattern>/decorate</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>GenerateRubricServlet</servlet-name>
+        <url-pattern>/nciso</url-pattern>
     </servlet-mapping>
 </web-app>
