* should be demo ready, fixed some stuff
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@13736 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -14,6 +14,10 @@
         <servlet-name>GenerateRubricServlet</servlet-name>
         <servlet-class>gov.usgs.cida.dcpt.servlet.GenerateRubricServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>DatasetServlet</servlet-name>
+        <servlet-class>gov.usgs.cida.dcpt.servlet.DatasetServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IngestControlServlet</servlet-name>
         <url-pattern>/ingestors</url-pattern>
@@ -25,5 +29,9 @@
     <servlet-mapping>
         <servlet-name>GenerateRubricServlet</servlet-name>
         <url-pattern>/nciso</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>DatasetServlet</servlet-name>
+        <url-pattern>/datasets</url-pattern>
     </servlet-mapping>
 </web-app>
