--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>gov.usgs.cida</groupId>
-  <artifactId>dcpt</artifactId>
+  <artifactId>dclt</artifactId>
   <packaging>war</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>dcpt</name>
+  <name>Data Cleaning &amp; Load Tools</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -71,6 +71,6 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>dcpt</finalName>
+        <finalName>dclt</finalName>
     </build>
 </project>
