--- a/pom.xml
+++ b/pom.xml
@@ -35,7 +35,7 @@
 	<dependency>
 		<groupId>gov.noaa.ngdc</groupId>
 		<artifactId>nciso</artifactId>
-		<version>1.1.1</version>
+		<version>1.1.1-1</version>
 		<type>jar</type>
 		<scope>compile</scope>
 	</dependency>
