--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -27,6 +27,14 @@
         <servlet-class>gov.usgs.cida.dcpt.servlet.DerbyServlet</servlet-class>
         <load-on-startup>1</load-on-startup>
     </servlet>
+    <servlet>
+        <servlet-name>IngestControlService</servlet-name>
+        <servlet-class>gov.usgs.cida.dcpt.service.IngestControlService</servlet-class>
+        <init-param>
+            <param-name>jndi_name</param-name>
+            <param-value>java:comp/env/jdbc/NCETL</param-value>
+        </init-param>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IngestControlServlet</servlet-name>
         <url-pattern>/ingestors</url-pattern>
@@ -50,5 +58,9 @@
     <servlet-mapping>
         <servlet-name>DerbyServlet</servlet-name>
         <url-pattern>/DerbyServlet</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>IngestControlService</servlet-name>
+        <url-pattern>/service/ingest/*</url-pattern>
     </servlet-mapping>
 </web-app>
