--- a/pom.xml
+++ b/pom.xml
@@ -16,9 +16,9 @@
             <url>http://igsarmewfsbbl.er.usgs.gov:8081/nexus/content/repositories/cida-gdp-thirdparty</url>
         </repository>
         <repository>
-            <id>cida-releases</id>
-            <name>CIDA Releases</name>
-            <url>http://igsarmewfsbbl.er.usgs.gov:8081/nexus/content/repositories/cida-releases</url>
+            <id>cida-snapshots</id>
+            <name>CIDA Snapshots</name>
+            <url>http://igsarmewfsbbl.er.usgs.gov:8081/nexus/content/repositories/cida-snapshots</url>
         </repository>
     </repositories>
 
@@ -101,7 +101,7 @@
         <dependency>
             <groupId>gov.usgs.cida</groupId>
             <artifactId>jdbc-spec-library</artifactId>
-            <version>0.5.5</version>
+            <version>0.5.7-SNAPSHOT</version>
         </dependency>
     </dependencies>
     <build>
