did a bunch of stuff apparently.  Wanted to check in for ESRLServlet
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@15228 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -35,6 +35,14 @@
             <param-value>java:comp/env/jdbc/NCETL</param-value>
         </init-param>
     </servlet>
+    <servlet>
+        <servlet-name>RandomNumberServlet</servlet-name>
+        <servlet-class>gov.usgs.cida.ncetl.servlet.RandomNumberServlet</servlet-class>
+    </servlet>
+    <servlet>
+        <servlet-name>ESRLServlet</servlet-name>
+        <servlet-class>gov.usgs.cida.ncetl.servlet.ESRLServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IngestControlServlet</servlet-name>
         <url-pattern>/ingestors</url-pattern>
@@ -62,5 +70,13 @@
     <servlet-mapping>
         <servlet-name>IngestControlService</servlet-name>
         <url-pattern>/service/ingest/*</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>RandomNumberServlet</servlet-name>
+        <url-pattern>/random</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>ESRLServlet</servlet-name>
+        <url-pattern>/esrl</url-pattern>
     </servlet-mapping>
 </web-app>
