--- a/pom.xml
+++ b/pom.xml
@@ -123,6 +123,22 @@
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.cargo</groupId>
+                <artifactId>cargo-maven2-plugin</artifactId>
+                <configuration>
+                    <container>
+                        <containerId>${cargo.containerId}</containerId>
+                        <type>remote</type>
+                    </container>
+                    <configuration>
+                        <type>runtime</type>
+                        <properties>
+                            <cargo.server.settings>${cargo.server.settings}</cargo.server.settings>
+                        </properties>
+                    </configuration>
+                </configuration>
+            </plugin>
         </plugins>
         <finalName>ncETL</finalName>
     </build>
