Added servlet to create NCML file along with the XML
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@15321 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,6 +47,10 @@
         <servlet-name>ESRLServlet</servlet-name>
         <servlet-class>gov.usgs.cida.ncetl.servlet.ESRLServlet</servlet-class>
     </servlet>
+    <servlet>
+        <servlet-name>WrapperServlet</servlet-name>
+        <servlet-class>gov.usgs.cida.ncetl.servlet.WrapperServlet</servlet-class>
+    </servlet>
     <servlet-mapping>
         <servlet-name>IngestControlServlet</servlet-name>
         <url-pattern>/ingestors</url-pattern>
@@ -86,5 +90,9 @@
     <servlet-mapping>
         <servlet-name>EchoServlet</servlet-name>
         <url-pattern>/echo</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>WrapperServlet</servlet-name>
+        <url-pattern>/WrapperServlet</url-pattern>
     </servlet-mapping>
 </web-app>
