Using ncISO to generate the ncml, will add and remove from there.  May feed the add/remove ncml functions back into ncISO
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@15380 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/pom.xml
+++ b/pom.xml
@@ -57,7 +57,7 @@
             <artifactId>nciso</artifactId>
             <version>1.1.1-1</version>
         </dependency>
-        <dependency>
+        <!--dependency>
             <groupId>edu.ucar</groupId>
             <artifactId>netcdf</artifactId>
             <version>4.2.20</version>
@@ -68,12 +68,12 @@
             <version>8.0.29</version>
         </dependency>
         <dependency>
-            <groupId>org.jdom</groupId>
-            <artifactId>jdom</artifactId>
-            <version>1.1</version>
-        </dependency>
+            <groupId>edu.ucar</groupId>
+            <artifactId>unidataCommon</artifactId>
+            <version>4.2.20</version>
+        </dependency-->
         <dependency>
-            <groupId>jdom</groupId>
+            <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
             <version>1.1</version>
         </dependency>
