--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,32 @@
     </properties>
 
     <dependencies>
+        <!--
+            Because the ncISO jar already provides these
+            dependencies, they're not necessary to 
+            pull in here. 
+        -->
+        <!--dependency>
+            <groupId>edu.ucar</groupId>
+            <artifactId>netcdf</artifactId>
+            <version>4.2.20</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.16</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>edu.ucar</groupId>
+            <artifactId>grib</artifactId>
+            <version>8.0.29</version>
+        </dependency>
+        <dependency>
+            <groupId>edu.ucar</groupId>
+            <artifactId>unidataCommon</artifactId>
+            <version>4.2.20</version>
+        </dependency-->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -57,21 +83,6 @@
             <artifactId>nciso</artifactId>
             <version>1.1.1-1</version>
         </dependency>
-        <!--dependency>
-            <groupId>edu.ucar</groupId>
-            <artifactId>netcdf</artifactId>
-            <version>4.2.20</version>
-        </dependency>
-        <dependency>
-            <groupId>edu.ucar</groupId>
-            <artifactId>grib</artifactId>
-            <version>8.0.29</version>
-        </dependency>
-        <dependency>
-            <groupId>edu.ucar</groupId>
-            <artifactId>unidataCommon</artifactId>
-            <version>4.2.20</version>
-        </dependency-->
         <dependency>
             <groupId>org.jdom</groupId>
             <artifactId>jdom</artifactId>
@@ -88,12 +99,6 @@
             <version>${slf4j.version}</version>
             <scope>runtime</scope>
         </dependency>
-<!--        <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
-            <scope>runtime</scope>
-        </dependency>-->
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
