--- a/pom.xml
+++ b/pom.xml
@@ -173,6 +173,7 @@
             <plugin>
                 <groupId>org.codehaus.cargo</groupId>
                 <artifactId>cargo-maven2-plugin</artifactId>
+                <version>1.0.3</version>
                 <configuration>
                     <container>
                         <containerId>${cargo.containerId}</containerId>
