--- a/pom.xml
+++ b/pom.xml
@@ -78,9 +78,9 @@
             <version>1.6.2</version>
         </dependency>
         <dependency>
-            <groupId>gov.noaa.ngdc</groupId>
-            <artifactId>nciso</artifactId>
-            <version>1.1.1-1</version>
+            <groupId>gov.noaa.eds</groupId>
+            <artifactId>ncISO</artifactId>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.jdom</groupId>
@@ -149,6 +149,7 @@
             <artifactId>commons-lang</artifactId>
             <version>2.5</version>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
