--- a/pom.xml
+++ b/pom.xml
@@ -80,7 +80,7 @@
         <dependency>
             <groupId>gov.noaa.eds</groupId>
             <artifactId>ncISO</artifactId>
-            <version>1.2.1-1-SNAPSHOT</version>
+            <version>1.2.1</version>
         </dependency>
         <dependency>
             <groupId>org.jdom</groupId>
