--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <slf4j.version>1.6.1</slf4j.version>
         <netbeans.hint.deploy.server>Tomcat60</netbeans.hint.deploy.server>
+        <logback.version>0.9.26</logback.version>
     </properties>
 
     <dependencies>
@@ -155,7 +156,16 @@
             <artifactId>commons-lang</artifactId>
             <version>2.5</version>
         </dependency>
-
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-core</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>ch.qos.logback</groupId>
+            <artifactId>logback-classic</artifactId>
+            <version>${logback.version}</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
