--- a/pom.xml
+++ b/pom.xml
@@ -133,7 +133,7 @@
         <dependency>
             <groupId>gov.usgs.cida</groupId>
             <artifactId>jdbc-spec-library</artifactId>
-            <version>0.5.7-SNAPSHOT</version>
+            <version>0.5.7</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
