upped maven-surefire-plugin to 2.9, replaced deprecated way of specifying variables
http://maven.apache.org/plugins/maven-surefire-plugin/examples/system-properties.html

git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@15621 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/pom.xml
+++ b/pom.xml
@@ -263,20 +263,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>2.4.3</version>
+                <version>2.9</version>
                 <configuration>
                     <testFailureIgnore>true</testFailureIgnore>
                     <!-- NOTE: extra properties required for unit tests -->
-                    <systemProperties>
-                        <property>
-                            <name>catalina.base</name>
-                            <value>target/test-classes</value>
-                        </property>
-                        <property>
-                            <name>catalina.home</name>
-                            <value>target/test-classes</value>
-                        </property>
-                    </systemProperties>
+                    <systemPropertyVariables>
+                        <catalina.base>target/test-classes</catalina.base>
+                        <catalina.home>target/test-classes</catalina.home>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <plugin>
