added IngestControlService to excluded test coverage list
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@15689 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/pom.xml
+++ b/pom.xml
@@ -241,6 +241,7 @@
                     <instrumentation>
                         <excludes>
                             <exclude>gov/usgs/cida/ncetl/servlet/**/*.class</exclude>
+                            <exclude>gov/usgs/cida/ncetl/service/IngestControlService.class</exclude>
                         </excludes>
                     </instrumentation>
                 </configuration>
