Formatted logging better, removed unused derby dependencies, changed table map key to reflect table name properly
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@15953 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/pom.xml
+++ b/pom.xml
@@ -139,7 +139,7 @@
             <artifactId>derby</artifactId>
             <version>10.8.1.2</version>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.apache.derby</groupId>
             <artifactId>derbytools</artifactId>
             <version>10.8.1.2</version>
@@ -148,7 +148,7 @@
             <groupId>org.apache.derby</groupId>
             <artifactId>derbyclient</artifactId>
             <version>10.8.1.2</version>
-        </dependency>
+        </dependency>-->
         
         <!-- ################## TESTING -->
         <dependency>
@@ -233,7 +233,7 @@
     
     <build>
         <plugins>
-            <plugin>
+<!--            <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>cobertura-maven-plugin</artifactId>
                 <version>2.5.1</version>
@@ -254,7 +254,7 @@
                         </goals>
                     </execution>
                 </executions>
-            </plugin>
+            </plugin>-->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
