--- a/pom.xml
+++ b/pom.xml
@@ -198,7 +198,11 @@
             <artifactId>commons-cli</artifactId>
             <version>1.2</version>
         </dependency>
-        
+        <dependency>
+            <groupId>commons-dbutils</groupId>
+            <artifactId>commons-dbutils</artifactId>
+            <version>1.3</version>
+        </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
