Rearrangement of frontend code, plus a couple spec/service changes
git-svn-id: https://cida-svn.er.usgs.gov/repos/dev/usgs/dcpt/trunk@16002 622dc1fb-2224-0410-ab72-dc85a3975e1a

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -86,7 +86,7 @@
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>IngestControlService</servlet-name>
-        <url-pattern>/service/ingest/*</url-pattern>
+        <url-pattern>/service/task/*</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>RandomNumberServlet</servlet-name>
